// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`createTargetGraph Basic graph, seperate nodes 1`] = `
"[
  {
    "id": "__start",
    "dependencies": []
  },
  {
    "id": "foo1#build",
    "dependencies": [
      "__start",
      "foo2#build"
    ]
  },
  {
    "id": "foo2#build",
    "dependencies": [
      "__start"
    ]
  }
]"
`;

exports[`createTargetGraph Basic graph, spanning tasks 1`] = `
"[
  {
    "id": "__start",
    "dependencies": []
  },
  {
    "id": "foo1#build",
    "dependencies": [
      "__start",
      "foo2#build"
    ]
  },
  {
    "id": "foo2#build",
    "dependencies": [
      "__start"
    ]
  },
  {
    "id": "foo1#test",
    "dependencies": [
      "__start",
      "foo1#build"
    ]
  },
  {
    "id": "foo2#test",
    "dependencies": [
      "__start",
      "foo2#build"
    ]
  }
]"
`;

exports[`createTargetGraph Merging Dependencies in pipeline and package.json override 1`] = `
"[
  {
    "id": "__start",
    "dependencies": []
  },
  {
    "id": "foo1#build",
    "dependencies": [
      "__start",
      "foo2#build",
      "foo3#build",
      "foo4#build"
    ]
  },
  {
    "id": "foo2#build",
    "dependencies": [
      "__start"
    ]
  },
  {
    "id": "foo3#build",
    "dependencies": [
      "__start"
    ]
  },
  {
    "id": "foo4#build",
    "dependencies": [
      "__start"
    ]
  }
]"
`;

exports[`createTargetGraph Merging inputs and outputs in pipeline and package.json override 1`] = `
"[
  {
    "id": "__start",
    "dependencies": []
  },
  {
    "id": "foo1#build",
    "dependencies": [
      "__start",
      "foo2#build"
    ],
    "inputs": [
      "src/**",
      "src/**",
      "myTool.config",
      "tsconfig.json"
    ],
    "outputs": [
      "lib/**",
      "dist/**"
    ]
  },
  {
    "id": "foo2#build",
    "dependencies": [
      "__start"
    ],
    "inputs": [
      "src/**"
    ],
    "outputs": [
      "lib/**"
    ]
  }
]"
`;
